--- a/app/src/main/res/layout/activity_calorie_intake.xml
+++ b/app/src/main/res/layout/activity_calorie_intake.xml
@@ -21,15 +21,42 @@
         tools:layout_editor_absoluteX="117dp"
         tools:layout_editor_absoluteY="52dp" />
 
-    <Button
-        android:id="@+id/findExerciseList"
-        android:layout_width="155dp"
-        android:layout_height="95dp"
-        android:layout_marginBottom="64dp"
-        android:background="@android:color/holo_blue_dark"
-        android:text="See List of Exercise"
-        android:textColor="@android:color/black"
-        tools:layout_editor_absoluteY="450dp"
-        android:layout_alignParentBottom="true"
+    <EditText
+        android:id="@+id/userAge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="45dp"
+        android:background="@android:color/holo_orange_light"
+        android:hint="@string/enter_your_age"
+        tools:ignore="TextViewEdits"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="245dp"
+        android:layout_above="@+id/userWeight"
         android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:id="@+id/userWeight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_orange_dark"
+        android:hint="@string/enter_your_weight_in_lbs"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="299dp"
+        android:layout_marginBottom="30dp"
+        tools:ignore="TextFields"
+        android:layout_above="@+id/findDailyCalorieButton"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/findDailyCalorieButton"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@android:color/holo_green_light"
+        android:text="@string/find_calorie_intake"
+        android:textColor="@android:color/background_light"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="457dp" />
 </RelativeLayout>
