--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,37 +10,37 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="555dp"
         android:background="@drawable/gym"
         android:scaleType="centerCrop"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/titleGetFit" />
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:id="@+id/titleGetFit"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
-        android:layout_marginTop="8dp"
-        android:textColor="@android:color/holo_green_light"
-        android:textSize="37sp"
+        android:background="@android:color/black"
+        android:text="@string/welcome_to_getfit"
+        android:textAlignment="center"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="40sp"
         android:textStyle="bold"
-        tools:ignore="RtlHardcoded"
-        tools:text="Welcome to GetFIT"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/findDailyCalorieButton"
-        android:layout_alignEnd="@+id/findDailyCalorieButton" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/colorPrimary"
+        app:itemBackground="@android:color/black"
         app:itemIconTint="@drawable/nav_item_color"
         app:itemTextColor="@drawable/nav_item_color"
-        app:menu="@menu/bottom_navigation_main">
-    </android.support.design.widget.BottomNavigationView>
+        app:menu="@menu/bottom_navigation_main"></android.support.design.widget.BottomNavigationView>
 
 
 
