add yummlyservice and constants

--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/action_add_2"
         android:enabled="true"
         android:icon="@drawable/ic_add_2"
-        android:title="Nutrition"
+        android:title="Search"
         app:showAsAction="ifRoom"/>
 
     <item
