--- a/app/src/main/res/layout/activity_calorie_intake.xml
+++ b/app/src/main/res/layout/activity_calorie_intake.xml
@@ -7,10 +7,13 @@
     <TextView
         android:id="@+id/userInputInformation"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="400dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="14dp"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="117dp"
         tools:layout_editor_absoluteY="52dp" />
@@ -55,5 +58,7 @@
         android:text="@string/find_calorie_intake"
         android:textColor="@android:color/background_light"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="457dp" />
+        tools:layout_editor_absoluteY="457dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
