--- a/app/src/main/res/layout/activity_nutrition.xml
+++ b/app/src/main/res/layout/activity_nutrition.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     tools:context="com.epicodus.getfit.ExerciseProgram">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="568dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true" />
+
     <EditText
         android:id="@+id/searchFood"
         android:layout_width="match_parent"
@@ -21,24 +29,20 @@
 
     <Button
         android:id="@+id/search_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/search"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="27dp"
-        android:text="@string/search" />
+        android:layout_centerHorizontal="true" />
 
     <ListView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView"/>
+
 
 
 </RelativeLayout>
