--- a/app/src/main/res/layout/list_food.xml
+++ b/app/src/main/res/layout/list_food.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:layout_width="130dp"
+        android:layout_height="100dp"
+        android:id="@+id/foodImageView"
+        android:scaleType="centerCrop"/>
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -14,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/nameTextView"
+            android:id="@+id/foodNameTextView"
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="Food Name"
