--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,22 +15,7 @@
         android:scaleType="centerCrop"
         tools:ignore="ContentDescription"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/titleGetFit" />
-
-    <TextView
-        android:id="@+id/titleGetFit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/black"
-        android:text="@string/welcome_to_getfit"
-        android:textAlignment="center"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -41,8 +26,5 @@
         app:itemIconTint="@drawable/nav_item_color"
         app:itemTextColor="@drawable/nav_item_color"
         app:menu="@menu/bottom_navigation_main"></android.support.design.widget.BottomNavigationView>
-
-
-
 
 </RelativeLayout>
