--- a/app/src/main/res/layout/fragment_nutrition_detail.xml
+++ b/app/src/main/res/layout/fragment_nutrition_detail.xml
@@ -68,6 +68,18 @@
                     android:layout_marginBottom="10dp"
                     android:gravity="center" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ingredientsTextView"
+                    android:drawablePadding="4dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="10dp"
+                    android:gravity="center" />
+
+
+
             </LinearLayout>
 
             <Button
