--- a/app/src/main/res/layout/activity_calorie_intake.xml
+++ b/app/src/main/res/layout/activity_calorie_intake.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.epicodus.getfit.CalorieIntake">
+    tools:context="com.epicodus.getfit.ui.CalorieIntake">
 
     <TextView
         android:id="@+id/userInputInformation"
