--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.epicodus.getfit.CreateAccountActivity"
+    tools:context="com.epicodus.getfit.ui.CreateAccountActivity"
     android:background="@color/colorPrimary">
 
     <LinearLayout
