--- a/app/src/main/res/layout/activity_nutrition_detail.xml
+++ b/app/src/main/res/layout/activity_nutrition_detail.xml
@@ -3,7 +3,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.epicodus.getfit.NutritionDetailActivity">
+tools:context="com.epicodus.getfit.ui.NutritionDetailActivity">
 
 <android.support.v4.view.ViewPager
     android:id="@+id/viewPager"
